--- a/lovely-pets-client/package.json
+++ b/lovely-pets-client/package.json
@@ -98,6 +98,7 @@
 		"react-router-dom": "6.16.0",
 		"react-toastify": "9.1.3",
 		"redux": "4.2.1",
+		"ts-node": "^10.9.2",
 		"yup": "1.3.2"
 	},
 	"config": {
