--- a/lovely-pets-client/tsconfig.json
+++ b/lovely-pets-client/tsconfig.json
@@ -29,5 +29,6 @@
 		"strictNullChecks": false,
 	},
 	"outDir": "./dist/",
-	"include": ["src/**/*"]
+	"include": ["src/**/*"],
+	"exclude": ["node_modules", "dist"]
 }
